dealt with stupid FF bug with innerText (changed to textContent to get it working) and moved the send button to align with the form

--- a/html/css/mlab.css
+++ b/html/css/mlab.css
@@ -66,8 +66,7 @@ html, body {
 }
 
 #extra-data input.btn {
-	float: right;
-	margin-right: 3em;
+	margin:1em 1.3em 5px;
 }
 
 #approx-loc {
